--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -18,6 +18,10 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Install Cython
+        run: pip install cython==0.29.36
+
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
