--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -18,13 +18,10 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install Cython
-        run: pip install cython==0.29.36
-
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install cython==0.29.36
           pip install buildozer
 
       - name: Build APK
@@ -38,4 +35,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: app-debug-apk
-          path: bin/*.apk
+          path: starter_app/bin/*.apk
