--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -17,6 +17,17 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+      - name: Install Android SDK Build Tools
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y openjdk-11-jdk wget unzip
+          wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
+          unzip cmdline-tools.zip -d $HOME/Android
+          mkdir -p $HOME/Android/cmdline-tools/latest
+          mv $HOME/Android/cmdline-tools/* $HOME/Android/cmdline-tools/latest/
+          export ANDROID_SDK_ROOT=$HOME/Android
+          yes | $HOME/Android/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT "platform-tools" "platforms;android-33" "build-tools;33.0.2"
+
 
       - name: Install dependencies
         run: |
