--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -17,23 +17,23 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - name: Install Android SDK Build Tools
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y openjdk-11-jdk wget unzip
-          wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
-          unzip cmdline-tools.zip -d $HOME/Android
-          mkdir -p $HOME/Android/cmdline-tools/latest
-          mv $HOME/Android/cmdline-tools/* $HOME/Android/cmdline-tools/latest/
-          export ANDROID_SDK_ROOT=$HOME/Android
-          yes | $HOME/Android/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT "platform-tools" "platforms;android-33" "build-tools;33.0.2"
 
+      - name: Install Cython
+        run: pip install cython==0.29.36
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install cython==0.29.36
           pip install buildozer
+
+      - name: Setup Android SDK cmdline-tools
+        run: |
+          mkdir -p $HOME/Android/cmdline-tools
+          if [ ! -d "$HOME/Android/cmdline-tools/latest" ]; then
+            mv $HOME/Android/cmdline-tools/cmdline-tools $HOME/Android/cmdline-tools/latest
+          else
+            echo "cmdline-tools/latest already exists, skipping move"
+          fi
 
       - name: Build APK
         run: |
@@ -46,4 +46,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: app-debug-apk
-          path: starter_app/bin/*.apk
+          path: bin/*.apk
+
