--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -18,19 +18,6 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Download Android command line tools
-        run: |
-          mkdir -p $HOME/Android/cmdline-tools
-          cd $HOME/Android/cmdline-tools
-          wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
-          unzip cmdline-tools.zip
-          # Move cmdline-tools folder to latest if not exists
-          if [ ! -d "$HOME/Android/cmdline-tools/latest" ]; then
-            mv cmdline-tools latest
-          else
-            echo "cmdline-tools/latest already exists, skipping move"
-          fi
-
       - name: Install Cython
         run: pip install cython==0.29.36
 
@@ -38,6 +25,15 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install buildozer
+        env:
+          ANDROIDSDKROOT: ${{ secrets.ANDROIDSDKROOT }}
+
+      - name: Install Android SDK build tools and platform tools
+        run: |
+          yes | sdkmanager --licenses
+          sdkmanager "platform-tools" "build-tools;33.0.0" "platforms;android-33"
+        env:
+          ANDROIDSDKROOT: ${{ secrets.ANDROIDSDKROOT }}
 
       - name: Build APK
         run: |
