--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -25,15 +25,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install buildozer
-        env:
-          ANDROIDSDKROOT: ${{ secrets.ANDROIDSDKROOT }}
-
-      - name: Install Android SDK build tools and platform tools
-        run: |
-          yes | sdkmanager --licenses
-          sdkmanager "platform-tools" "build-tools;33.0.0" "platforms;android-33"
-        env:
-          ANDROIDSDKROOT: ${{ secrets.ANDROIDSDKROOT }}
 
       - name: Build APK
         run: |
@@ -46,6 +37,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: app-debug-apk
-          path: bin/*.apk
+          path: starter_app/bin/*.apk
+
 
 
