--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -21,17 +21,24 @@ jobs:
       - name: Install Cython
         run: pip install cython==0.29.36
 
-      - name: Install dependencies
+      - name: Install buildozer and dependencies
         run: |
           python -m pip install --upgrade pip
           pip install buildozer
 
+      - name: Setup Android SDK
+        env:
+          ANDROIDSDKROOT: ${{ secrets.ANDROIDSDKROOT }}
+        run: |
+          yes | $ANDROIDSDKROOT/cmdline-tools/latest/bin/sdkmanager --install "platform-tools" "build-tools;33.0.2" "platforms;android-33" "cmdline-tools;latest"
+          yes | $ANDROIDSDKROOT/cmdline-tools/latest/bin/sdkmanager --licenses
+
       - name: Build APK
+        env:
+          ANDROIDSDKROOT: ${{ secrets.ANDROIDSDKROOT }}
         run: |
           cd starter_app
           buildozer android debug
-        env:
-          ANDROIDSDKROOT: ${{ secrets.ANDROIDSDKROOT }}
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
