--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -18,33 +18,38 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install Cython
-        run: pip install cython==0.29.36
-
-      - name: Install buildozer and dependencies
+      - name: Install required tools
         run: |
           python -m pip install --upgrade pip
-          pip install buildozer
+          pip install cython==0.29.36 buildozer
 
-      - name: Setup Android SDK
-        env:
-          ANDROIDSDKROOT: ${{ secrets.ANDROIDSDKROOT }}
+      - name: Setup Android SDK cmdline-tools
         run: |
-          yes | $ANDROIDSDKROOT/cmdline-tools/latest/bin/sdkmanager --install "platform-tools" "build-tools;33.0.2" "platforms;android-33" "cmdline-tools;latest"
+          mkdir -p $ANDROIDSDKROOT/cmdline-tools
+          cd $ANDROIDSDKROOT
+          if [ ! -d "$ANDROIDSDKROOT/cmdline-tools/latest" ]; then
+            wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
+            unzip cmdline-tools.zip -d cmdline-tools
+            mv cmdline-tools/cmdline-tools $ANDROIDSDKROOT/cmdline-tools/latest
+            rm cmdline-tools.zip
+          else
+            echo "cmdline-tools/latest already exists, skipping download"
+          fi
+
+      - name: Accept licenses and install SDK packages
+        run: |
           yes | $ANDROIDSDKROOT/cmdline-tools/latest/bin/sdkmanager --licenses
+          $ANDROIDSDKROOT/cmdline-tools/latest/bin/sdkmanager --install "platform-tools" "build-tools;33.0.2" "platforms;android-33" "cmdline-tools;latest"
 
       - name: Build APK
-        env:
-          ANDROIDSDKROOT: ${{ secrets.ANDROIDSDKROOT }}
         run: |
           cd starter_app
           buildozer android debug
+        env:
+          ANDROIDSDKROOT: ${{ secrets.ANDROIDSDKROOT }}
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: app-debug-apk
-          path: starter_app/bin/*.apk
-
-
-
+          path: bin/*.apk
