--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -9,6 +9,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    env:
+      ANDROIDSDKROOT: ${{ secrets.ANDROIDSDKROOT }}
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -18,38 +21,27 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install required tools
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install cython==0.29.36 buildozer
+          pip install cython==0.29.36
+          pip install buildozer
 
-      - name: Setup Android SDK cmdline-tools
-        run: |
-          mkdir -p $ANDROIDSDKROOT/cmdline-tools
-          cd $ANDROIDSDKROOT
-          if [ ! -d "$ANDROIDSDKROOT/cmdline-tools/latest" ]; then
-            wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
-            unzip cmdline-tools.zip -d cmdline-tools
-            mv cmdline-tools/cmdline-tools $ANDROIDSDKROOT/cmdline-tools/latest
-            rm cmdline-tools.zip
-          else
-            echo "cmdline-tools/latest already exists, skipping download"
-          fi
+      - name: Accept Android SDK licenses
+        run: yes | $ANDROIDSDKROOT/cmdline-tools/latest/bin/sdkmanager --licenses
 
-      - name: Accept licenses and install SDK packages
+      - name: Install Android SDK packages
         run: |
-          yes | $ANDROIDSDKROOT/cmdline-tools/latest/bin/sdkmanager --licenses
-          $ANDROIDSDKROOT/cmdline-tools/latest/bin/sdkmanager --install "platform-tools" "build-tools;33.0.2" "platforms;android-33" "cmdline-tools;latest"
+          $ANDROIDSDKROOT/cmdline-tools/latest/bin/sdkmanager "platform-tools" "build-tools;33.0.2" "platforms;android-33" "cmdline-tools;latest"
 
       - name: Build APK
         run: |
           cd starter_app
           buildozer android debug
-        env:
-          ANDROIDSDKROOT: ${{ secrets.ANDROIDSDKROOT }}
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: app-debug-apk
           path: bin/*.apk
+
