--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -9,9 +9,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    env:
-      ANDROIDSDKROOT: ${{ secrets.ANDROIDSDKROOT }}
-
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -21,12 +18,17 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Install Cython
+        run: pip install cython==0.29.36
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install cython==0.29.36
           pip install buildozer
-          
+
+      - name: Set ANDROIDSDKROOT environment variable
+        run: echo "ANDROIDSDKROOT=/home/runner/Android" >> $GITHUB_ENV
+
       - name: Download Android cmdline-tools
         run: |
           mkdir -p $ANDROIDSDKROOT/cmdline-tools
@@ -37,19 +39,17 @@ jobs:
 
       - name: Accept Android SDK licenses
         run: yes | $ANDROIDSDKROOT/cmdline-tools/latest/bin/sdkmanager --licenses
-   
 
-      - name: Accept Android SDK licenses
-        run: yes | $ANDROIDSDKROOT/cmdline-tools/latest/bin/sdkmanager --licenses
-
-      - name: Install Android SDK packages
+      - name: Install Android SDK components
         run: |
-          $ANDROIDSDKROOT/cmdline-tools/latest/bin/sdkmanager "platform-tools" "build-tools;33.0.2" "platforms;android-33" "cmdline-tools;latest"
+          $ANDROIDSDKROOT/cmdline-tools/latest/bin/sdkmanager "platform-tools" "build-tools;33.0.2" "platforms;android-33"
 
       - name: Build APK
         run: |
           cd starter_app
           buildozer android debug
+        env:
+          ANDROIDSDKROOT: ${{ env.ANDROIDSDKROOT }}
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
