--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,4 +1,4 @@
-name: Build APK
+name: Android SDK Setup Test
 
 on:
   push:
@@ -6,54 +6,29 @@ on:
       - main
 
 jobs:
-  build:
+  sdk-setup:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: Install Cython
-        run: pip install cython==0.29.36
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install buildozer
-
-      - name: Set ANDROIDSDKROOT environment variable
+      - name: Set ANDROIDSDKROOT env
         run: echo "ANDROIDSDKROOT=/home/runner/Android" >> $GITHUB_ENV
 
-      - name: Download Android cmdline-tools
+      - name: Download Command Line Tools
         run: |
           mkdir -p $ANDROIDSDKROOT/cmdline-tools
           cd $ANDROIDSDKROOT/cmdline-tools
-          curl -o commandlinetools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
-          unzip -o commandlinetools.zip
+          wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
+          unzip cmdline-tools.zip
           mv cmdline-tools latest
+          rm cmdline-tools.zip
 
-      - name: Accept Android SDK licenses
-        run: yes | $ANDROIDSDKROOT/cmdline-tools/latest/bin/sdkmanager --licenses
-
-      - name: Install Android SDK components
+      - name: Install Android SDK packages
         run: |
-          $ANDROIDSDKROOT/cmdline-tools/latest/bin/sdkmanager "platform-tools" "build-tools;33.0.2" "platforms;android-33"
+          yes | $ANDROIDSDKROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROIDSDKROOT --licenses
+          $ANDROIDSDKROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROIDSDKROOT "platform-tools" "build-tools;33.0.2" "platforms;android-33"
 
-      - name: Build APK
-        run: |
-          cd starter_app
-          buildozer android debug
-        env:
-          ANDROIDSDKROOT: ${{ env.ANDROIDSDKROOT }}
-
-      - name: Upload APK artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-debug-apk
-          path: bin/*.apk
-
+      - name: List installed SDK packages
+        run: $ANDROIDSDKROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROIDSDKROOT --list_installed
